@@ -1,3 +1,8 @@
+2009-01-27  Petr Machata  <pmachata@redhat.com>
+
+	* dwarflint.c: Match the way dwarflint reports offsets with the
+	way elfutils does it.
+
 2009-01-26  Petr Machata  <pmachata@redhat.com>
 
 	* dwarflint.c (check_aranges_structural): Check that each CU is
